--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "@assets/*": ["assets/*"],
       "@components/*": ["src/components/*"],
       "@constants/*": ["src/constants/*"]
-    }
+    },
+    "types": ["react-native-dotenv"]
   },
   "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
 }
