--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/material-top-tabs": "^7.2.8",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.49.4",
+    "@tanstack/react-query": "^5.72.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "expo": "~52.0.42",
