--- a/package.json
+++ b/package.json
@@ -14,27 +14,27 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/material-top-tabs": "^7.2.8",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.72.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
-    "expo": "~52.0.42",
+    "expo": "~52.0.46",
     "expo-crypto": "~14.0.2",
     "expo-font": "~13.0.4",
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
     "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "~0.29.22",
+    "expo-splash-screen": "^0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.8",
+    "react-native": "^0.76.9",
     "react-native-elements": "^3.4.3",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
