--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.72.0",
+    "base64-arraybuffer": "^1.0.2",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "expo": "~52.0.46",
     "expo-crypto": "~14.0.2",
+    "expo-file-system": "~18.0.12",
     "expo-font": "~13.0.4",
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
