--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/material-top-tabs": "^7.2.8",
     "@react-navigation/native": "^7.0.14",
+    "@stripe/stripe-react-native": "0.38.6",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.72.0",
     "base64-arraybuffer": "^1.0.2",
@@ -43,7 +44,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "stripe": "^13.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
