admin and users push notifications implemented.

--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     "react-native-screens": "~4.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
-    "stripe": "^13.10.0"
+    "stripe": "^13.10.0",
+    "expo-notifications": "~0.29.14",
+    "expo-device": "~7.0.3",
+    "expo-constants": "~17.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
